--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
+          <li ><%= link_to 'New Idea', new_idea_path %></li>
           <li><a href="/ideas">Ideias</a></li>
           <li><a href="/pages/info">Info</a></li>
         </ul>
